--- a/.env.testing
+++ b/.env.testing
@@ -60,7 +60,7 @@ VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-MIDTRANS_SERVER_KEY=SB-Mid-server-Hf-2fvH7CUh6mBoRilJ6Z0Ib
+MIDTRANS_SERVER_KEY=
 MIDTRANS_CLIENT_KEY= SB-Mid-client-nVfC1IvgB6iVjzVs
 MIDTRANS_IS_PRODUCTION=false
 MIDTRANS_IS_SANITIZED=true
